From version 0.9.1 to 0.9.2
- trap aborts and exits to kill fifo and treat "0.0.0.0" as NULL (Bug: #4).
- add contact: and expires param to registration (Bug: #5).

From version 0.9.0 to 0.9.1
- fix for unit test

From version 0.8.4 to 0.9.0
- uses ucommon 3.3.4 or later
- error logging uses ucommon
- some internationalization work

From version 0.8.3 to 0.8.4
- some minor adjustments to assure prack events
- better detection of unresolvable request uri's

From version 0.8.2 to 0.8.3
- new server messages to drop calls and notify interface state changes
- publish domain routing in zeroconf for future automatic route detection
- network up and down scripting to notify sipwitch on network changes

From version 0.8.1 to 0.8.2
- now requires ucommon 2.1.3 or later

From version 0.8.0 to 0.8.1
- code cleanup and opensolaris support
- now requires ucommon 2.1.2 or later

From version 0.7.5 to 0.8.0
- uses ucommon 2.1
- added notify plugin to use libnotify

From version 0.7.4 to 0.7.5
- fix init script and defaults

From version 0.7.3 to 0.7.4
- fix for default uuid system realms.
- fix for sippasswd to send digest hash to server when live.

From version 0.7.2 to 0.7.3
- sipwitch state can now show as well as set state.
- new configure split for cgi support.

From version 0.7.1 to 0.7.2
- new server history control to dump recent errlog records from daemon.
- server option to set size of errlog history.
- automatically set localnames with hostname by default.
- activate or end server sip tracing from control interface.

From version 0.7.0 to 0.7.1
- when ran in pure user mode, do not use system directories or configs.

From version 0.6.2 to 0.7.0
- integrated media proxy for NAT support.
- authentication realm and "domain" merged into single property.
- new P_SIPWITCH_NODE header to mark anonymous/off-network internodal calls.

From version 0.6.1 to 0.6.2
- only create extensions for generated accounts if using extension dialing.