@@ -38,6 +38,12 @@ unsigned service::callback::sip_range = 0;
 int service::callback::sip_protocol = IPPROTO_UDP;
 int service::callback::sip_family = AF_INET;
 int service::callback::sip_tlsmode = 0;
+const char *service::callback::sip_tlspwd = "";
+const char *service::callback::sip_tlsdev = "/dev/random";
+const char *service::callback::sip_tlsca = "/etc/ssl/ca.pem";
+const char *service::callback::sip_tlsdh = "/etc/ssl/dh1024.pem";
+const char *service::callback::sip_tlscert = "/etc/ssl/sipwitch.pem";
+const char *service::callback::sip_tlskey = "/etc/ssl/private/sipwitch.key";
 const char *service::callback::sip_realm = "unknown";
 const char *service::callback::sip_domain = NULL;
 char service::callback::session_uuid[40];
